Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

22-Jun-2011 Christophe Demko
 # [#24604] JDate class sets php timezone to UTC which forces all Joomla addons to use UTC dates

21-Jun-2011 Christophe Demko
 # [#26211] New opensearch feature generate non valid html output
 # [#26212] Bluestork administrator login screen is not valid
 ^ Replace media/system/images/notice-* images by transparent ones

21-Jun-2011 Jean-Marie Simonet
 # [#26172] fatal error when calling $app->logout(); Thanks Nikolai
 
21-Jun-2011 Mark Dexter
 # [#26194] Replace calls to JRegistry::loadJSON (Michael Babker)
 # [#26196] Use field type email in com_contact (Rouven Weßling)
 # [#26193] Actually use the namespaced version of checkAll() (Rouven Weßling)

20-Jun-2011 Christophe Demko
 # [#26201] Broken newsfeeds when SEF URLs are off (Nikolai Plath)
 + [#25200] View Access Level not testing in Administrator Models (Amy Stephen)
 + [#25250] Add support for OpenSearch to com_search (Rouven Weßling)

20-Jun-2011 Andrew Eddie
 + Added feature [#26113] Add PHP and HTML modes to CodeMirror (Rouven Weßling).
 + Added feature [#24930] Add to debug log information component and module start time and memory use when showing (Vladimir Serotyukov, Dennis Hermatski).
 # Fixed [#26077] JModelList casts $query to string unnecessarily making it impossible to implement Joomfish (Geraint Edwards).

19-Jun-2011 Christophe Demko
 # [#25116] icon as image file instead of document in media manager
 # [#26184] Don't render meta elements without content (Rouven Weßling)
 ^ [#23165] Make index.html's valid (Rouven Weßling)
 # [#26181] Some minor fixes for the installation (Rouven Weßling)
 # [#26189] Plugin uninstall uses incorrect sql (Kevin Griffiths & Sam Moffatt)