@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 22-Jun-2011 Christophe Demko
  # [#24604] JDate class sets php timezone to UTC which forces all Joomla addons to use UTC dates
+ # [#25239] Cant set template style (bill richardson)
 
 21-Jun-2011 Christophe Demko
  # [#26211] New opensearch feature generate non valid html output
